<resources>
    <string name="app_name">Tracer</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_repeat">Repeat password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration">Registration</string>
    <string name="button_login">Log in</string>
    <string name="log_out">Log out</string>
    <string name="create_new_account">Create new account</string>
    <string name="associative">Your associative key is</string>
    <string name="send_to_email">Send to email</string>
    <string name="next">Next></string>
    <string name="stop_tracking">Fill password to stop tracking</string>


</resources>
