<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textSize="32sp"
            android:textColor="@color/myBlue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/stop_tracking"
            />

        <EditText
            android:id="@+id/logout_password"
            android:layout_width="270dp"
            android:layout_height="42dp"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/myBlue"
            android:textColorHint="@color/myBlue"
            android:layout_marginTop="36dp"
            />

        <Button

            android:id="@+id/logout_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="160dp"
            android:layout_height="42dp"
            android:layout_marginStart="57dp"
            android:layout_marginTop="36dp"
            android:background="@color/myBlue"
            android:text="@string/log_out"
            android:textColor="@color/white"
            android:textSize="16sp"
            />

    </LinearLayout>
</LinearLayout>