<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        >

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:textSize="32sp"
                android:textColor="@color/myBlue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/associative"
                android:layout_marginBottom="12dp"
                />

            <TextView
                android:id="@+id/key_field"
                android:textSize="44sp"
                android:textColor="@color/myBlue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text=""
                android:layout_marginTop="38dp"
                />

            <EditText
                android:id="@+id/email_field"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="270dp"
                android:layout_height="42dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="38dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/myBlue"
                android:textColorHint="@color/myBlue"
                />
        </LinearLayout>

        <!--Buttons-->
        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="42dp"
            android:orientation="horizontal"
            android:layout_marginTop="38dp"
            >

            <Button
                android:id="@+id/send_to_email_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="160dp"
                android:layout_height="42dp"
                android:background="@color/myBlue"
                android:text="@string/send_to_email"
                android:textColor="@color/white"
                tools:layout_editor_absoluteX="14dp"
                android:textSize="16sp"
                />
            <!--Spacer between-->
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/next_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="160dp"
                android:layout_height="42dp"
                android:background="@color/myBlue"
                android:text="@string/next"
                android:textColor="@color/white"
                tools:layout_editor_absoluteX="14dp"
                android:textSize="16sp"
                />


        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>